# ECE346

./: .gitignore  .gitmodules  README.md  client.sh  download_map.sh  host.sh  setup_env.sh  update_submodule.sh
Docs/: private_fork.md  ssh.md
FAQ/: faq.md  readme.md
Host_Setup/: robotstack.md  ros_conda_install_unix.sh  start_ros.sh
Host_Setup/RoboStack/: install_dependency.sh  local_ros.sh  robotstack.md  ros_conda_install_unix.sh  ros_conda_install_unix_new.sh
Host_Setup/RoboStack/Windows/: ros_conda_install_windows.sh  windows_robostack.md
Host_Setup/RoboStack/osx/: pyspline-1.5.2-py3-none-any.whl
Host_Setup/Windows/: windows_robostack.md
Host_Setup/linux/: pyspline-1.5.2-py3-none-linux_x86_64.whl
Host_Setup/linux_aarch64/: pyspline-1.5.2-py3-none-linux_aarch64.whl
Host_Setup/osx/: pyspline-1.5.2-py3-none-any.whl
Host_Setup/osx_arm/: pyspline-1.5.2-py3-none-any.whl
ROS_Core/: network_ros_client.sh  network_ros_host.sh  readme.md
ROS_Core/py_ws/src/Labs/Lab0/: CMakeLists.txt  README.md
ROS_Core/py_ws/src/Labs/Lab1/: README.md
ROS_Core/py_ws/src/Labs/Lab3/: README.md
ROS_Core/py_ws/src/Labs/Lab4/: README.md
ROS_Core/src/Labs/FinalProject/: CMakeLists.txt  package.xml  readme.md  setup.py  task1.yaml  task2.yaml
ROS_Core/src/Labs/FinalProject/launch/: task1_detection.launch  task1_simulation.launch  task2_only_simulate_boss.launch  task2_simulation.launch
ROS_Core/src/Labs/FinalProject/scripts/: task1_obstacle_detection_node.py  task2_world_node.py
ROS_Core/src/Labs/FinalProject/scripts/task2_world/: __init__.py  boss.py  swift_haul.py  util.py
ROS_Core/src/Labs/FinalProject/srv/: Reward.srv  Schedule.srv  Task.srv
ROS_Core/src/Labs/Lab0/: README.md  package.xml  setup.py
ROS_Core/src/Labs/Lab0/configs/: config.yaml
ROS_Core/src/Labs/Lab0/launch/: controller.launch  lab0_simulation.launch  lab0_truck.launch
ROS_Core/src/Labs/Lab1/: .gitignore  README.md  setup.py
ROS_Core/src/Labs/Lab1/cfg/: planner.cfg
ROS_Core/src/Labs/Lab1/launch/: ilqr_simulation.launch  ilqr_truck.launch  lab2_task2.launch
ROS_Core/src/Labs/Lab1/scripts/: task1.ipynb  traj_planner.py  traj_planning_node.py
ROS_Core/src/Labs/Lab2/: CMakeLists.txt  README.md  package.xml  setup.py
ROS_Core/src/Labs/Lab2/cfg/: config.cfg
ROS_Core/src/Labs/Lab2/launch/: frs.launch
ROS_Core/src/Labs/Lab2/scripts/: dyn_obstacle_node.py  frs.py  static_obstacle_node.py  task2.ipynb
ROS_Core/src/Labs/Lab2/srv/: GetFRS.srv
ROS_Core/src/Labs/Lab3/: mdp.py  pomdp.ipynb  readme.md  visualizer.py
ROS_Core/src/Labs/Lab4/: CMakeLists.txt  package.xml  readme.md
ROS_Core/src/Labs/Lab4/cfg/: controller.cfg
ROS_Core/src/Labs/Lab4/data/: data_example.pkl
ROS_Core/src/Labs/Lab4/launch/: lab4.launch
ROS_Core/src/Labs/Lab4/models/: model_example.pt
ROS_Core/src/Labs/Lab4/scripts/: imitation_learn.py  learning_node.py  neural_network.py  offline_train.ipynb
ROS_ws/src/Lab0/: .README.md.swp  README.md
ROS_ws/src/driver/maestro_control_ros/rc_control/: CMakeLists.txt  package.xml
ROS_ws/src/driver/maestro_control_ros/rc_control_msgs/: CMakeLists.txt
ROS_ws/src/driver/maestro_control_ros/rc_control_msgs/msg/: RCControl.msg
ROS_ws/src/driver/traj_msgs/: package.xml
ROS_ws/src/driver/traj_msgs/msg/: TrajMsg.msg
ROS_ws/src/driver/traj_tracking_ros/: CMakeLists.txt  README.md  package.xml  setup.py
ROS_ws/src/driver/traj_tracking_ros/launch/: stanley.launch
ROS_ws/src/driver/traj_tracking_ros/params/: stanley.yaml
ROS_ws/src/driver/traj_tracking_ros/scripts/: traj_tracking_node.py
ROS_ws/src/lab0/: CMakeLists.txt  README.md  package.xml
ROS_ws/src/lab0/launch/: checkpoint1.launch  checkpoint2.launch  keyboard_only.launch
ROS_ws/src/lab0/scripts/: control_node.py  keyboard_listener.py  pose_node.py  teleop_key.py
ROS_ws/src/lab2/: README.md
ROS_ws/src/lab2/ellipsoid/: reach.py
ROS_ws/src/lab2/traj_planning_ros/: CMakeLists.txt  README.md  setup.py
ROS_ws/src/lab2/traj_planning_ros/launch/: ilqr_planning.launch  ilqr_planning_vicon.launch
ROS_ws/src/lab2/traj_planning_ros/params/: ilqr.yaml
ROS_ws/src/lab2/traj_planning_ros/scripts/: planning.py  traj_planning_node.py
ROS_ws/src/lab2/traj_planning_ros/src/: test_track.py
asset/: private_fork.md  ssh.md
asset/Jetson_Setup/: add_on.sh  config.mk  disable_BT.sh  eduroam-linux-Princeton_University-Princeton_eduroam.py  init.sh  install_acados.sh  install_dep.sh  install_ros.sh  install_zed.sh  ssd_extern.sh
asset/maestro-linux/: MaestroControlCenter  README.txt  UscCmd
catkin_ws/src/: CMakeLists.txt
catkin_ws/src/first_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/first_pkg/launch/: first_launch.launch
catkin_ws/src/first_pkg/script/: first_node.py
src/Control/maestro_control_ros/rc_control/: CMakeLists.txt  package.xml
src/Control/maestro_control_ros/rc_control/cfg/: calibration.cfg
src/Control/maestro_control_ros/rc_control/launch/: rc_control_node.launch
src/Control/maestro_control_ros/rc_control/src/: servo_controller.cpp
src/Control/maestro_control_ros/rc_control_msgs/: package.xml
src/Control/maestro_control_ros/rc_control_msgs/msg/: RCControl.msg
src/Control/traj_msgs/: CMakeLists.txt
src/Perception/zed-ros-wrapper/zed_wrapper/launch/: zed2.launch
src/Planning/traj_planning_ros/: .gitignore  CMakeLists.txt
src/Planning/traj_planning_ros/params/: ilqr.yaml
src/Planning/traj_planning_ros/scripts/: planning.py  realtime_buffer.py
src/Planning/traj_planning_ros/src/iLQR/: ilqr.py  (+2 more)
(+79 files in other folders)
