<?xml version="1.0"?>
<package format="2">
  <name>final_project</name>
  <version>0.1.0</version>
  <description>The final_project package</description>

  <maintainer email="zixuz@princeton.edu">Zixu Zhang</maintainer>
  <license>BSD</license>

  <author >Zixu Zhang</author>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>racecar_routing</depend>
  <depend>std_msgs</depend>
  <depend>racecar_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nav_msgs</depend>
</package>